[package]
name = "shifgrethor"
version = "0.1.0"
edition = "2018"
authors = ["Without Boats <boats@mozilla.com>"]

[dependencies]
pin-cell = "0.1.1"

[dependencies.derive]
path = "src/lib/derive"
version = "0.1.0"
package = "shifgrethor-derive"

[dependencies.gc]
path = "src/lib/gc"
version = "0.1.0"
package = "shifgrethor-gc"

[dev-dependencies]
env_logger = "0.5.13"

[workspace]
members = [
    "src/lib/derive",
    "src/lib/gc",
]
